# course-app-inference-service

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yaml
.github/workflows/: lint.yaml
app/: run.py
app/api/: prediction.py
app/config/: .env  logger.py  model.py
app/schema/: apartment.py
app/services/: __init__.py  model_inference.py
